# pi-oven

./: .gitignore  AGENTS.md  CLA.md  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml
.cargo/: config.toml
.github/workflows/: cla.yml
crates/pi-oven/: Cargo.toml
crates/pi-oven-net/: Cargo.toml
crates/pi-oven-net/src/: client.rs  lib.rs  reconnect.rs
crates/pi-oven-protocol/: Cargo.toml
crates/pi-oven-protocol/src/: lib.rs
crates/pi-oven-protocol/tests/: msg.rs
crates/pi-oven-render/: Cargo.toml
crates/pi-oven-render/assets/fonts/: README.md
crates/pi-oven-render/src/: backend.rs  grid.rs  lib.rs  paint.rs
crates/pi-oven-render/tests/: backend.rs
crates/pi-oven-ui/: Cargo.toml
crates/pi-oven-ui/src/: conversation.rs  editor.rs  header.rs  input.rs  legend.rs  lib.rs  sidebar.rs  status_bar.rs  tabs.rs
crates/pi-oven-ui/tests/: layout.rs
crates/pi-oven/src/: config.rs  keys.rs  main.rs
docs/: claude_plan.md  first_prompt.md  fork_inspiration.md  logo.xcf
openspec/changes/archive/2026-04-29-clipboard-support/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-29-input-editor/: proposal.md
openspec/changes/archive/2026-04-29-input-editor/specs/input-editor/: spec.md
openspec/changes/archive/2026-04-29-live-session/specs/wire-transport/: spec.md
openspec/changes/archive/2026-04-29-render-empty-panes/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-29-scaffold-runtime/: design.md  tasks.md
openspec/changes/archive/2026-04-29-scaffold-runtime/specs/client-runtime/: spec.md
openspec/changes/archive/2026-04-29-scaffold-runtime/specs/server-runtime/: spec.md
openspec/changes/archive/2026-04-29-scaffold-runtime/specs/state-migrations/: spec.md
openspec/changes/archive/2026-04-29-static-chrome/: proposal.md  tasks.md
openspec/changes/archive/2026-04-29-static-chrome/specs/client-ui/: spec.md
openspec/changes/archive/2026-04-29-wire-transport/: tasks.md
openspec/changes/archive/2026-04-29-wire-transport/specs/server-runtime/: spec.md
openspec/changes/clipboard-support/specs/client-ui/: spec.md
openspec/changes/clipboard-support/specs/clipboard/: spec.md
openspec/changes/input-editor/: design.md  tasks.md
openspec/changes/live-session/: design.md  proposal.md  tasks.md
openspec/changes/live-session/specs/agent-session/: spec.md
openspec/changes/live-workspace-chrome/: design.md  proposal.md  tasks.md
openspec/changes/live-workspace-chrome/specs/client-ui/: spec.md
openspec/changes/live-workspace-chrome/specs/wire-transport/: spec.md
openspec/changes/render-empty-panes/: tasks.md
openspec/changes/render-empty-panes/specs/client-ui/: spec.md
openspec/changes/scaffold-runtime/: design.md  proposal.md  tasks.md
openspec/changes/static-chrome/: design.md  tasks.md
openspec/changes/static-chrome/specs/client-ui/: spec.md
openspec/changes/wire-real-pi-sdk/: design.md  proposal.md  tasks.md
openspec/changes/wire-real-pi-sdk/specs/agent-session/: spec.md
openspec/changes/wire-transport/: design.md  proposal.md  tasks.md
openspec/changes/wire-transport/specs/wire-transport/: spec.md
openspec/specs/client-runtime/: spec.md
openspec/specs/client-ui/: spec.md
openspec/specs/conversation-pane/: spec.md
openspec/specs/server-runtime/: spec.md
openspec/specs/state-migrations/: spec.md
openspec/specs/wire-transport/: spec.md
