[workspace]
members = ["crates/*"]
resolver = "2"

[profile.dev]
opt-level = 0
debug = "line-tables-only"
codegen-units = 256
incremental = true

# Strip debug info from third-party crates — halves link size and time on the
# typical edit-rebuild loop, where only first-party crates are interesting in
# the debugger.
[profile.dev.package."*"]
opt-level = 0
debug = false
