[package]
name = "pi-oven-net"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
tokio-tungstenite = "0.24"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
pi-oven-protocol = { path = "../pi-oven-protocol" }
