[package]
name = "pi-oven-ui"
version = "0.0.0"
edition = "2021"
publish = false

# pi-oven-ui is intentionally backend-trait-agnostic: widgets are written
# against `ratatui::backend::Backend`, never against a concrete backend.
# It does NOT depend on `pi-oven-render`.
[dependencies]
ratatui = { version = "0.29", default-features = false }
pi-oven-protocol = { path = "../pi-oven-protocol" }
